# metacrypt-cpp

./: CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: inspect.cpp  roundtrip.cpp
include/metacrypt/: metacrypt.hpp
tests/: smoke.cpp  test_cases.cpp
